--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8" />
-  <title>Restauracja Simulator [BETA]</title>
+  <title>Restauracja Simulator</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -187,9 +187,6 @@
 <!-- GŁÓWNA CZĘŚĆ GRY -->
 <div id="main">
   <h1>Restauracja Simulator</h1>
-  <div class="column">
-            <a href="https://nateosigma.github.io/Natro-Studios/">Wróć</a>
-  </div>
 
   <div id="stats">
     <button id="randomIngredientBtn" onclick="buyRandomIngredient()">🎲 Losowy składnik (5 zł)</button>
